# phantomVault

./: .gitignore  ARCHITECTURE_REFACTOR_COMPLETE.md  CLEANUP_SUMMARY.md  CMakeLists.txt  COMPREHENSIVE_TESTING_GUIDE.md  DASHBOARD_VERSIONS_ANALYSIS.md  ELECTRON_FIXES.md  HOTKEY_FIXES_SUMMARY.md  LICENSE  PHASE_1_COMPLETION_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  TASK10_ERROR_HANDLING_DOCUMENTATION.md  TASK13_COMPREHENSIVE_TEST_SUITE.md  TASK7_1_GUI_INTEGRATION_DOCUMENTATION.md  TASK8_API_DOCUMENTATION.md  TASK8_COMPLETION_SUMMARY.md  TASK9_RECOVERY_SYSTEM_DOCUMENTATION.md  TASK_7.1_TESTING_INSTRUCTIONS.md  TASK_7.2_TESTING_INSTRUCTIONS.md  VAULT_RESTORATION_SUMMARY.md  build.sh  install-phantomvault.sh  native_service  native_service.cpp  phantomvault-app.sh  phantomvault-cli-fixed  prepare-release.sh  run-dev.sh  simple_service  simple_service.cpp  test-desktop-app.sh  test-installer.sh  test_keyboard_simple.cpp  test_profile_vault_integration.cpp  test_real_keyboard_detection.cpp  test_task10_error_handling.cpp  test_task11_privilege_management.cpp  (+10 more)
.kiro/specs/gui-vault-management/: tasks.md
.kiro/specs/phantomvault-complete-system/: design.md  requirements.md  tasks.md
.kiro/specs/profile-based-vault-system/: design.md  requirements.md  tasks.md
.kiro/specs/real-folder-encryption/: design.md  requirements.md  tasks.md
core/: CMakeLists.txt
core/include/: analytics_engine.hpp  encryption_engine.hpp  enhanced_keyboard_detector.hpp  error_handler.hpp  folder_security_manager.hpp  independent_recovery_system.hpp  ipc_client.hpp  ipc_server.hpp  keyboard_sequence_detector.hpp  memory_manager.hpp  performance_monitor.hpp  platform_adapter.hpp  platform_detection_manager.hpp  privilege_manager.hpp  profile_manager.hpp  profile_vault.hpp  service_manager.hpp  vault_handler.hpp
core/include/phantom_vault/: core.hpp  encryption.hpp  filesystem.hpp  hotkey_manager.hpp  input_overlay.hpp  ipc_server.hpp  keyboard_hook.hpp  process_concealer.hpp  recovery_manager.hpp  service.hpp  service_vault_manager.hpp  storage.hpp  system_tray.hpp  vault_encryption_manager.hpp  vault_metadata_manager.hpp  vault_storage_manager.hpp
core/scripts/: phantomvault.service.in
core/src/: analytics_engine.cpp  core.cpp  encryption.cpp  encryption_engine.cpp  enhanced_keyboard_detector.cpp  error_handler.cpp  filesystem_linux.cpp  folder_security_manager.cpp  hotkey_manager.cpp  independent_recovery_system.cpp  input_overlay.cpp  ipc_client.cpp  ipc_server.cpp  keyboard_hook_linux.cpp  keyboard_sequence_detector.cpp  main.cpp  memory_manager.cpp  performance_monitor.cpp  platform_adapter.cpp  platform_detection_manager.cpp  privilege_manager.cpp  process_concealer_linux.cpp  profile_manager.cpp  profile_vault.cpp  sequence_detector.cpp  service_main.cpp  service_manager.cpp  service_simple.cpp  service_vault_manager.cpp  storage.cpp  system_tray_linux.cpp  vault_encryption_manager.cpp  vault_handler.cpp  vault_metadata_manager.cpp  version.cpp
core/tests/: CMakeLists.txt  basic_test.cpp  comprehensive_test_suite.cpp  core_test.cpp  deployment_validation.cpp  encryption_test.cpp  filesystem_test.cpp  integration_test.cpp  keyboard_hook_test.cpp  process_concealer_test.cpp  production_readiness_test.cpp  recovery_test.cpp  sequence_detector_test.cpp  simple_production_test.cpp  storage_test.cpp  system_tray_test.cpp  test_all_components.cpp  test_encryption_engine.cpp  test_enhanced_error_handler.cpp  test_framework.cpp  test_framework.hpp  test_integration_comprehensive.cpp  test_performance.cpp  test_profile_vault_integration.cpp  test_security_compliance.cpp  test_security_penetration.cpp  test_vault_encryption_manager.cpp  test_vault_metadata_manager.cpp  test_vault_storage_manager.cpp
docs/: QUICK_START.md  README.md  SECURITY_AUDIT.md  USER_MANUAL.md
features/cloud-backup/: cloud_backup.cpp
gui/: index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
gui/electron/: main.ts  preload.ts
gui/scripts/: copy-service.js
gui/src/: App.tsx  index.css  main.tsx
gui/src/components/: Analytics.tsx  Dashboard.tsx  ErrorBoundary.tsx  LoadingScreen.tsx  Settings.tsx
gui/src/hooks/: useAppTheme.ts  useServiceStatus.ts
gui/src/types/: global.d.ts
installer/: README.md  install-linux.sh  install-macos.sh  phantomvault-linux-installer.sh  uninstall-linux.sh
installer/config/: installer-config.json
installer/scripts/: build-all-installers.sh  build-linux-installer.sh  build-linux-packages.sh  build-macos-installer.sh  build-maintenance-tools.sh  build-windows-installer.sh  install-dependencies.sh
phantomVault-1.2.0/: .gitignore  README.md  build-all.sh  phantomvault-app.sh  uninstall-phantomvault.sh
phantomVault-1.2.0/core/src/: directory_protection.cpp  input_overlay.cpp  recovery_manager.cpp  (+4 more)
phantomVault-1.2.0/features/: advanced_features_test.cpp
phantomVault-1.2.0/scripts/: install.sh  manage-service.sh  uninstall-service.sh
phantomVault-1.2.0/systemd/: phantom-vault.service
phantomVault-1.2.0/ui/: index.html  package.json  start-app.sh  start-dev.sh  tsconfig.json  tsconfig.node.json  vitest.config.ts
scripts/: detect-system.sh  install-fallback.sh  install-service.sh  test-directory-protection.sh  test-ipc-client.py
src/: main.cpp  phantomvault_application.cpp  phantomvault_application.hpp
test_profile_vault_integration/vaults/: vault_metadata.json
tests/: integration_test_ipc.sh  service_test.sh  simple_ipc_test.sh
ui/: code_analysis.sh  diagnose.sh  package.json  reset-for-testing.sh  start-app-production.sh  test-keydown.html  test-render.html  test_ipc.js  tsconfig.json  vite.config.ts
ui/electron/: VaultFolderManager.js  VaultProfileManager.js  auto-lock-manager.js  auto-lock-manager.ts  fs-watcher.js  hotkey-manager.js  hotkey-manager.ts  main.js  main.js.ffi-backup  preload.js  security-helpers.js  tsconfig.json
ui/native/: binding.gyp  package.json
ui/src/: App.css  App.tsx  main.tsx  setupTests.ts
ui/styles/: components.scss  icons.scss
(+212 files in other folders)
